--- a/src/css/Routes.css
+++ b/src/css/Routes.css
@@ -1,4 +1,5 @@
 .content{
+  height: 100%;
   position: relative;
   min-height: 100vh;
 }
