--- a/src/css/SignUp.css
+++ b/src/css/SignUp.css
@@ -1,7 +1,10 @@
 .sign {
-  width: 500px;
+  width: auto;
+  max-width: 500px;
   height: 600px;
-  margin: 80px auto;
+  margin: auto;
+  margin-top: 20vh;
+  margin-bottom: 20vh;
   text-align: center;
   font-size: 1.5em;
   border-radius: 10px;
