--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Acme&display=swap');
-* {
-  box-sizing: border-box;
-}
+
 body {
   margin: auto;
   font-family: 'Acme', sans-serif;
 
-
+  height: 100vh;
   background-color: #a8d0e6;
   min-width: 450px;
-  min-height: 100%;
+  min-height: 100vh;
   margin-left: 10px;
   margin-right: 10px;
-  /* background-image: url(image/background.jpg); */
-  /* background-size: cover; */
-  /* padding: 10px; */
 }
